com.dubture.twig.core/src/com/dubture/twig/core/parser/TwigParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 TwigParser.g 2011-11-17 22:58:49

package com.dubture.twig.core.parser;

import com.dubture.twig.core.parser.error.IErrorReporter;
import com.dubture.twig.core.TwigCorePlugin;
import com.dubture.twig.core.log.Logger;




import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class TwigParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PRINT_OPEN", "PRINT_CLOSE", "CTRL_OPEN", "CTRL_CLOSE", "METHOD_START", "METHOD_END", "ARRAY_START", "ARRAY_END", "ASIG", "LARGER", "SMALLER", "EQUAL", "NOTEQUAL", "TILDE", "MINUS", "PIPE", "DDOT", "DOT", "COLON", "COMMA", "BSLASH", "JSON_START", "JSON_END", "QM", "IN", "TWIG_AS", "TWIG_OR", "NOT", "WITH", "ONLY", "IS", "DEFINED", "DIGIT", "NUMBER", "STRING_CHAR", "STRING", "NONCONTROL_CHAR", "STRING_LITERAL", "LOWER", "UPPER", "UNDER", "LETTER", "SYMBOL", "WHITESPACE", "TWIG_PR_STMT", "TWIG_VAR", "TWIG_TAG", "LITERAL_ARG", "OR"
    };
    public static final int EOF=-1;
    public static final int PRINT_OPEN=4;
    public static final int PRINT_CLOSE=5;
    public static final int CTRL_OPEN=6;
    public static final int CTRL_CLOSE=7;
    public static final int METHOD_START=8;
    public static final int METHOD_END=9;
    public static final int ARRAY_START=10;
    public static final int ARRAY_END=11;
    public static final int ASIG=12;
    public static final int LARGER=13;
    public static final int SMALLER=14;
    public static final int EQUAL=15;
    public static final int NOTEQUAL=16;
    public static final int TILDE=17;
    public static final int MINUS=18;
    public static final int PIPE=19;
    public static final int DDOT=20;
    public static final int DOT=21;
    public static final int COLON=22;
    public static final int COMMA=23;
    public static final int BSLASH=24;
    public static final int JSON_START=25;
    public static final int JSON_END=26;
    public static final int QM=27;
    public static final int IN=28;
    public static final int TWIG_AS=29;
    public static final int TWIG_OR=30;
    public static final int NOT=31;
    public static final int WITH=32;
    public static final int ONLY=33;
    public static final int IS=34;
    public static final int DEFINED=35;
    public static final int DIGIT=36;
    public static final int NUMBER=37;
    public static final int STRING_CHAR=38;
    public static final int STRING=39;
    public static final int NONCONTROL_CHAR=40;
    public static final int STRING_LITERAL=41;
    public static final int LOWER=42;
    public static final int UPPER=43;
    public static final int UNDER=44;
    public static final int LETTER=45;
    public static final int SYMBOL=46;
    public static final int WHITESPACE=47;
    public static final int TWIG_PR_STMT=48;
    public static final int TWIG_VAR=49;
    public static final int TWIG_TAG=50;
    public static final int LITERAL_ARG=51;
    public static final int OR=52;

    // delegates
    // delegators


        public TwigParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TwigParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return TwigParser.tokenNames; }
    public String getGrammarFileName() { return "TwigParser.g"; }



        private IErrorReporter errorReporter = null;
        
        public TwigParser(TokenStream input, IErrorReporter errorReporter) {
            this(input, new RecognizerSharedState());
            this.errorReporter = errorReporter;
        }

    	public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {

            
                if(errorReporter == null) {
                	Logger.log(Logger.WARNING, "Parser has no error reporter instance!");
             	   
                 	return;
                }
                	

            	
    		String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);        
            errorReporter.reportError(hdr,msg,e);
            
        }    
        
        public void setErrorReporter(IErrorReporter errorReporter) {
            this.errorReporter = errorReporter;
        }
        
    	protected Object recoverFromMismatchedToken(IntStream input,
    				int ttype, BitSet follow) throws RecognitionException
    	{   
    	    throw new MismatchedTokenException(ttype, input);
    	}       
    	
        public Object recoverFromMismatchedSet(IntStream input,
        			RecognitionException e, BitSet follow) throws RecognitionException 
        { 
    		throw new MismatchedSetException(follow, input);
       	}
    	


    public static class twig_source_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_source"
    // TwigParser.g:74:1: twig_source : ( twig_print_statement | twig_control_statement );
    public final TwigParser.twig_source_return twig_source() throws RecognitionException {
        TwigParser.twig_source_return retval = new TwigParser.twig_source_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        TwigParser.twig_print_statement_return twig_print_statement1 = null;

        TwigParser.twig_control_statement_return twig_control_statement2 = null;



        try {
            // TwigParser.g:75:3: ( twig_print_statement | twig_control_statement )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==PRINT_OPEN) ) {
                alt1=1;
            }
            else if ( (LA1_0==CTRL_OPEN) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // TwigParser.g:75:5: twig_print_statement
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_print_statement_in_twig_source72);
                    twig_print_statement1=twig_print_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_print_statement1.getTree());

                    }
                    break;
                case 2 :
                    // TwigParser.g:75:28: twig_control_statement
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_control_statement_in_twig_source76);
                    twig_control_statement2=twig_control_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_control_statement2.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_source"

    public static class twig_control_statement_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_control_statement"
    // TwigParser.g:80:1: twig_control_statement : CTRL_OPEN ( twig_control )? CTRL_CLOSE ;
    public final TwigParser.twig_control_statement_return twig_control_statement() throws RecognitionException {
        TwigParser.twig_control_statement_return retval = new TwigParser.twig_control_statement_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken CTRL_OPEN3=null;
        CommonToken CTRL_CLOSE5=null;
        TwigParser.twig_control_return twig_control4 = null;


        TwigCommonTree CTRL_OPEN3_tree=null;
        TwigCommonTree CTRL_CLOSE5_tree=null;

        try {
            // TwigParser.g:81:3: ( CTRL_OPEN ( twig_control )? CTRL_CLOSE )
            // TwigParser.g:81:5: CTRL_OPEN ( twig_control )? CTRL_CLOSE
            {
            root_0 = (TwigCommonTree)adaptor.nil();

            CTRL_OPEN3=(CommonToken)match(input,CTRL_OPEN,FOLLOW_CTRL_OPEN_in_twig_control_statement91); 
            CTRL_OPEN3_tree = (TwigCommonTree)adaptor.create(CTRL_OPEN3);
            adaptor.addChild(root_0, CTRL_OPEN3_tree);

            // TwigParser.g:81:15: ( twig_control )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==MINUS||LA2_0==STRING) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // TwigParser.g:81:15: twig_control
                    {
                    pushFollow(FOLLOW_twig_control_in_twig_control_statement93);
                    twig_control4=twig_control();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_control4.getTree());

                    }
                    break;

            }

            CTRL_CLOSE5=(CommonToken)match(input,CTRL_CLOSE,FOLLOW_CTRL_CLOSE_in_twig_control_statement96); 
            CTRL_CLOSE5_tree = (TwigCommonTree)adaptor.create(CTRL_CLOSE5);
            adaptor.addChild(root_0, CTRL_CLOSE5_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_control_statement"

    public static class twig_control_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_control"
    // TwigParser.g:84:1: twig_control : ( MINUS )? twig_control_tag ( twig_control_body )* ;
    public final TwigParser.twig_control_return twig_control() throws RecognitionException {
        TwigParser.twig_control_return retval = new TwigParser.twig_control_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken MINUS6=null;
        TwigParser.twig_control_tag_return twig_control_tag7 = null;

        TwigParser.twig_control_body_return twig_control_body8 = null;


        TwigCommonTree MINUS6_tree=null;

        try {
            // TwigParser.g:85:3: ( ( MINUS )? twig_control_tag ( twig_control_body )* )
            // TwigParser.g:85:5: ( MINUS )? twig_control_tag ( twig_control_body )*
            {
            root_0 = (TwigCommonTree)adaptor.nil();

            // TwigParser.g:85:5: ( MINUS )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==MINUS) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // TwigParser.g:85:5: MINUS
                    {
                    MINUS6=(CommonToken)match(input,MINUS,FOLLOW_MINUS_in_twig_control109); 
                    MINUS6_tree = (TwigCommonTree)adaptor.create(MINUS6);
                    adaptor.addChild(root_0, MINUS6_tree);


                    }
                    break;

            }

            pushFollow(FOLLOW_twig_control_tag_in_twig_control112);
            twig_control_tag7=twig_control_tag();

            state._fsp--;

            adaptor.addChild(root_0, twig_control_tag7.getTree());
            // TwigParser.g:85:29: ( twig_control_body )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==METHOD_START||LA4_0==ARRAY_START||LA4_0==ASIG||LA4_0==TILDE||LA4_0==PIPE||(LA4_0>=COLON && LA4_0<=COMMA)||LA4_0==JSON_START||(LA4_0>=QM && LA4_0<=TWIG_AS)||(LA4_0>=NOT && LA4_0<=DEFINED)||LA4_0==NUMBER||LA4_0==STRING||LA4_0==STRING_LITERAL||LA4_0==OR) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // TwigParser.g:85:29: twig_control_body
            	    {
            	    pushFollow(FOLLOW_twig_control_body_in_twig_control114);
            	    twig_control_body8=twig_control_body();

            	    state._fsp--;

            	    adaptor.addChild(root_0, twig_control_body8.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_control"

    public static class twig_control_tag_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_control_tag"
    // TwigParser.g:89:1: twig_control_tag : param= STRING -> ^( TWIG_TAG $param) ;
    public final TwigParser.twig_control_tag_return twig_control_tag() throws RecognitionException {
        TwigParser.twig_control_tag_return retval = new TwigParser.twig_control_tag_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken param=null;

        TwigCommonTree param_tree=null;
        RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");

        try {
            // TwigParser.g:90:3: (param= STRING -> ^( TWIG_TAG $param) )
            // TwigParser.g:90:5: param= STRING
            {
            param=(CommonToken)match(input,STRING,FOLLOW_STRING_in_twig_control_tag135);  
            stream_STRING.add(param);



            // AST REWRITE
            // elements: param
            // token labels: param
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_param=new RewriteRuleTokenStream(adaptor,"token param",param);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (TwigCommonTree)adaptor.nil();
            // 91:5: -> ^( TWIG_TAG $param)
            {
                // TwigParser.g:91:7: ^( TWIG_TAG $param)
                {
                TwigCommonTree root_1 = (TwigCommonTree)adaptor.nil();
                root_1 = (TwigCommonTree)adaptor.becomeRoot((TwigCommonTree)adaptor.create(TWIG_TAG, "TWIG_TAG"), root_1);

                adaptor.addChild(root_1, stream_param.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_control_tag"

    public static class twig_control_body_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_control_body"
    // TwigParser.g:94:1: twig_control_body : ( STRING_LITERAL | ASIG | PIPE | TILDE | NUMBER | COMMA | QM | COLON | range | eq_check | var_or_field | method_chain | keyword | array | json | in_check );
    public final TwigParser.twig_control_body_return twig_control_body() throws RecognitionException {
        TwigParser.twig_control_body_return retval = new TwigParser.twig_control_body_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken STRING_LITERAL9=null;
        CommonToken ASIG10=null;
        CommonToken PIPE11=null;
        CommonToken TILDE12=null;
        CommonToken NUMBER13=null;
        CommonToken COMMA14=null;
        CommonToken QM15=null;
        CommonToken COLON16=null;
        TwigParser.range_return range17 = null;

        TwigParser.eq_check_return eq_check18 = null;

        TwigParser.var_or_field_return var_or_field19 = null;

        TwigParser.method_chain_return method_chain20 = null;

        TwigParser.keyword_return keyword21 = null;

        TwigParser.array_return array22 = null;

        TwigParser.json_return json23 = null;

        TwigParser.in_check_return in_check24 = null;


        TwigCommonTree STRING_LITERAL9_tree=null;
        TwigCommonTree ASIG10_tree=null;
        TwigCommonTree PIPE11_tree=null;
        TwigCommonTree TILDE12_tree=null;
        TwigCommonTree NUMBER13_tree=null;
        TwigCommonTree COMMA14_tree=null;
        TwigCommonTree QM15_tree=null;
        TwigCommonTree COLON16_tree=null;

        try {
            // TwigParser.g:95:3: ( STRING_LITERAL | ASIG | PIPE | TILDE | NUMBER | COMMA | QM | COLON | range | eq_check | var_or_field | method_chain | keyword | array | json | in_check )
            int alt5=16;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // TwigParser.g:95:5: STRING_LITERAL
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    STRING_LITERAL9=(CommonToken)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_twig_control_body164); 
                    STRING_LITERAL9_tree = (TwigCommonTree)adaptor.create(STRING_LITERAL9);
                    adaptor.addChild(root_0, STRING_LITERAL9_tree);


                    }
                    break;
                case 2 :
                    // TwigParser.g:95:22: ASIG
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    ASIG10=(CommonToken)match(input,ASIG,FOLLOW_ASIG_in_twig_control_body168); 
                    ASIG10_tree = (TwigCommonTree)adaptor.create(ASIG10);
                    adaptor.addChild(root_0, ASIG10_tree);


                    }
                    break;
                case 3 :
                    // TwigParser.g:95:29: PIPE
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    PIPE11=(CommonToken)match(input,PIPE,FOLLOW_PIPE_in_twig_control_body172); 
                    PIPE11_tree = (TwigCommonTree)adaptor.create(PIPE11);
                    adaptor.addChild(root_0, PIPE11_tree);


                    }
                    break;
                case 4 :
                    // TwigParser.g:95:36: TILDE
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    TILDE12=(CommonToken)match(input,TILDE,FOLLOW_TILDE_in_twig_control_body176); 
                    TILDE12_tree = (TwigCommonTree)adaptor.create(TILDE12);
                    adaptor.addChild(root_0, TILDE12_tree);


                    }
                    break;
                case 5 :
                    // TwigParser.g:95:44: NUMBER
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    NUMBER13=(CommonToken)match(input,NUMBER,FOLLOW_NUMBER_in_twig_control_body180); 
                    NUMBER13_tree = (TwigCommonTree)adaptor.create(NUMBER13);
                    adaptor.addChild(root_0, NUMBER13_tree);


                    }
                    break;
                case 6 :
                    // TwigParser.g:95:53: COMMA
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    COMMA14=(CommonToken)match(input,COMMA,FOLLOW_COMMA_in_twig_control_body184); 
                    COMMA14_tree = (TwigCommonTree)adaptor.create(COMMA14);
                    adaptor.addChild(root_0, COMMA14_tree);


                    }
                    break;
                case 7 :
                    // TwigParser.g:95:61: QM
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    QM15=(CommonToken)match(input,QM,FOLLOW_QM_in_twig_control_body188); 
                    QM15_tree = (TwigCommonTree)adaptor.create(QM15);
                    adaptor.addChild(root_0, QM15_tree);


                    }
                    break;
                case 8 :
                    // TwigParser.g:95:66: COLON
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    COLON16=(CommonToken)match(input,COLON,FOLLOW_COLON_in_twig_control_body192); 
                    COLON16_tree = (TwigCommonTree)adaptor.create(COLON16);
                    adaptor.addChild(root_0, COLON16_tree);


                    }
                    break;
                case 9 :
                    // TwigParser.g:95:74: range
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_range_in_twig_control_body196);
                    range17=range();

                    state._fsp--;

                    adaptor.addChild(root_0, range17.getTree());

                    }
                    break;
                case 10 :
                    // TwigParser.g:95:82: eq_check
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_eq_check_in_twig_control_body200);
                    eq_check18=eq_check();

                    state._fsp--;

                    adaptor.addChild(root_0, eq_check18.getTree());

                    }
                    break;
                case 11 :
                    // TwigParser.g:95:93: var_or_field
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_var_or_field_in_twig_control_body204);
                    var_or_field19=var_or_field();

                    state._fsp--;

                    adaptor.addChild(root_0, var_or_field19.getTree());

                    }
                    break;
                case 12 :
                    // TwigParser.g:95:108: method_chain
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_method_chain_in_twig_control_body208);
                    method_chain20=method_chain();

                    state._fsp--;

                    adaptor.addChild(root_0, method_chain20.getTree());

                    }
                    break;
                case 13 :
                    // TwigParser.g:95:123: keyword
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_keyword_in_twig_control_body212);
                    keyword21=keyword();

                    state._fsp--;

                    adaptor.addChild(root_0, keyword21.getTree());

                    }
                    break;
                case 14 :
                    // TwigParser.g:95:133: array
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_array_in_twig_control_body216);
                    array22=array();

                    state._fsp--;

                    adaptor.addChild(root_0, array22.getTree());

                    }
                    break;
                case 15 :
                    // TwigParser.g:95:141: json
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_json_in_twig_control_body220);
                    json23=json();

                    state._fsp--;

                    adaptor.addChild(root_0, json23.getTree());

                    }
                    break;
                case 16 :
                    // TwigParser.g:95:148: in_check
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_in_check_in_twig_control_body224);
                    in_check24=in_check();

                    state._fsp--;

                    adaptor.addChild(root_0, in_check24.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_control_body"

    public static class in_check_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "in_check"
    // TwigParser.g:99:1: in_check : METHOD_START ( STRING_LITERAL | var_or_field ) IN ( STRING_LITERAL | var_or_field ) METHOD_END ;
    public final TwigParser.in_check_return in_check() throws RecognitionException {
        TwigParser.in_check_return retval = new TwigParser.in_check_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken METHOD_START25=null;
        CommonToken STRING_LITERAL26=null;
        CommonToken IN28=null;
        CommonToken STRING_LITERAL29=null;
        CommonToken METHOD_END31=null;
        TwigParser.var_or_field_return var_or_field27 = null;

        TwigParser.var_or_field_return var_or_field30 = null;


        TwigCommonTree METHOD_START25_tree=null;
        TwigCommonTree STRING_LITERAL26_tree=null;
        TwigCommonTree IN28_tree=null;
        TwigCommonTree STRING_LITERAL29_tree=null;
        TwigCommonTree METHOD_END31_tree=null;

        try {
            // TwigParser.g:100:3: ( METHOD_START ( STRING_LITERAL | var_or_field ) IN ( STRING_LITERAL | var_or_field ) METHOD_END )
            // TwigParser.g:100:5: METHOD_START ( STRING_LITERAL | var_or_field ) IN ( STRING_LITERAL | var_or_field ) METHOD_END
            {
            root_0 = (TwigCommonTree)adaptor.nil();

            METHOD_START25=(CommonToken)match(input,METHOD_START,FOLLOW_METHOD_START_in_in_check243); 
            METHOD_START25_tree = (TwigCommonTree)adaptor.create(METHOD_START25);
            adaptor.addChild(root_0, METHOD_START25_tree);

            // TwigParser.g:100:18: ( STRING_LITERAL | var_or_field )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==STRING_LITERAL) ) {
                alt6=1;
            }
            else if ( (LA6_0==STRING) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // TwigParser.g:100:19: STRING_LITERAL
                    {
                    STRING_LITERAL26=(CommonToken)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_in_check246); 
                    STRING_LITERAL26_tree = (TwigCommonTree)adaptor.create(STRING_LITERAL26);
                    adaptor.addChild(root_0, STRING_LITERAL26_tree);


                    }
                    break;
                case 2 :
                    // TwigParser.g:100:36: var_or_field
                    {
                    pushFollow(FOLLOW_var_or_field_in_in_check250);
                    var_or_field27=var_or_field();

                    state._fsp--;

                    adaptor.addChild(root_0, var_or_field27.getTree());

                    }
                    break;

            }

            IN28=(CommonToken)match(input,IN,FOLLOW_IN_in_in_check253); 
            IN28_tree = (TwigCommonTree)adaptor.create(IN28);
            adaptor.addChild(root_0, IN28_tree);

            // TwigParser.g:100:53: ( STRING_LITERAL | var_or_field )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==STRING_LITERAL) ) {
                alt7=1;
            }
            else if ( (LA7_0==STRING) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // TwigParser.g:100:54: STRING_LITERAL
                    {
                    STRING_LITERAL29=(CommonToken)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_in_check256); 
                    STRING_LITERAL29_tree = (TwigCommonTree)adaptor.create(STRING_LITERAL29);
                    adaptor.addChild(root_0, STRING_LITERAL29_tree);


                    }
                    break;
                case 2 :
                    // TwigParser.g:100:71: var_or_field
                    {
                    pushFollow(FOLLOW_var_or_field_in_in_check260);
                    var_or_field30=var_or_field();

                    state._fsp--;

                    adaptor.addChild(root_0, var_or_field30.getTree());

                    }
                    break;

            }

            METHOD_END31=(CommonToken)match(input,METHOD_END,FOLLOW_METHOD_END_in_in_check263); 
            METHOD_END31_tree = (TwigCommonTree)adaptor.create(METHOD_END31);
            adaptor.addChild(root_0, METHOD_END31_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "in_check"

    public static class range_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };
